refactor: restructure, added and update codebase
