# db/sqlc/models.go
@@ -1,21 +1,24 @@
 // Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.17.2
 
 package db
 
 import (
-	"encoding/json"
+	"database/sql"
 	"time"
 
 	"github.com/google/uuid"
+	"github.com/tabbed/pqtype"
 )
 
 type Reminder struct {
-	ID         int64           `json:"id"`
-	UserID     int64           `json:"user_id"`
-	WebsiteUrl string          `json:"website_url"`
-	Interval   string          `json:"interval"`
-	UpdatedAt  time.Time       `json:"updated_at"`
-	Extension  json.RawMessage `json:"extension"`
+	ID         int64                 `json:"id"`
+	UserID     int64                 `json:"user_id"`
+	WebsiteUrl string                `json:"website_url"`
+	Interval   string                `json:"interval"`
+	UpdatedAt  time.Time             `json:"updated_at"`
+	Extension  pqtype.NullRawMessage `json:"extension"`
 }
 
 type Session struct {
@@ -30,11 +33,13 @@ type Session struct {
 }
 
 type User struct {
-	ID                int64     `json:"id"`
-	FullName          string    `json:"full_name"`
-	HashedPassword    string    `json:"hashed_password"`
-	Email             string    `json:"email"`
-	PasswordChangedAt time.Time `json:"password_changed_at"`
-	CreatedAt         time.Time `json:"created_at"`
-	IsActivated       bool      `json:"is_activated"`
+	ID                int64          `json:"id"`
+	FullName          string         `json:"full_name"`
+	HashedPassword    string         `json:"hashed_password"`
+	Email             string         `json:"email"`
+	ProfileImageUrl   sql.NullString `json:"profile_image_url"`
+	PasswordChangedAt time.Time      `json:"password_changed_at"`
+	CreatedAt         time.Time      `json:"created_at"`
+	IsActive          bool           `json:"is_active"`
+	IsEmailVerified   bool           `json:"is_email_verified"`
 }
